<resources>
    <string name="app_name">Com Amor BC</string>
    <string name="produto">Product</string>
    <string name="nome">Name:</string>
    <string name="Quantidade">Quantity:</string>
    <string name="preço">Price:</string>
    <string name="peso">Weight(kg):</string>
    <string name="title_activity_cadastrar_produto">Product Registration</string>
    <string name="produtos">Products</string>
    <string name="cadastrar_produto">Product Registration</string>
    <string name="clientes">Customer</string>
    <string name="finanças">Business</string>
    <string name="encomendas">Orders</string>
    <string name="novo">New</string>
    <string name="rua">Street :</string>
    <string name="bairro">District:</string>
    <string name="numero">Number:</string>
    <string name="telefone">Telephone:</string>
    <string name="tipo">Tipo:</string>
    <string name="receita">Receita</string>
    <string name="despesa">Despesa</string>
    <string name="descrição">Description:</string>
    <string name="valor">Value:</string>
    <string name="cadastrar_cliente">Customer Registration</string>
    <string name="cadastrar_encomenda">Order Registration</string>
    <string name="cadastrar_financa">Business Registration</string>
    <string name="cliente">Customer:</string>
    <string name="produto_view">Product:</string>
    <string name="data_entrega">Delivery date:</string>
    <string name="comamorbc">Com amor bc</string>
    <string name="descricao_app">App developed for Mobile Programming discipline under the supervision of Professor Alexandre Feitosa.</string>
    <string name="camila">Camila de Lima Martins</string>
    <string name="sobre">About</string>
    <string name="produto_salvo_com_sucesso">Product successfully saved!</string>
    <string name="ordenar_por_nome">Order by name(Z-A)</string>
    <string name="ordernar_por_valor">Order by price</string>
    <string name="nao_ordenar">None</string>
    <string name="opcao_invalida">Invalid option!</string>
    <string name="erro_salvar_produto">All fields must be filled.</string>
    <string name="alterar">Change</string>
    <string name="apagar">Delete</string>
    <string name="alterar_produto">Change Product</string>
    <string name="salvar">Save</string>
    <string name="ok">ok</string>
    <string name="alerta">alert</string>
    <string name="confirmacao">Confirmation</string>
    <string name="deseja_realmente_apagar">You really want to delete?</string>
    <string name="sim">Yes</string>
    <string name="nao">No</string>
    <string name="alterar_cliente">Change Customer</string>
    <string name="alterar_financa">Change Recorde</string>
    <string name="alterar_encomenda">Change Order</string>
    <string name="data_encomenda">Order date:</string>
    <string name="ver_mais">View more</string>
</resources>
